Scaffold the links block

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "license": "BSD-3-Clause",
   "author": "Stephen Dickinson <stephencottontail@me.com>",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx wp-scripts build",
+    "start": "npx wp-scripts start"
   },
   "devDependencies": {
     "@wordpress/scripts": "^30.22.0"
